rectification inventaire touches